#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(cnpklib/cnpklib.c)
AM_INIT_AUTOMAKE(libcnpk.so, 1.0.0, no-define)
# AC_CONFIG_SRCDIR([cnpklib/cnpkopt.c])
AM_CONFIG_HEADER(config.h)

LT_VERSION=1:0:1
LT_RELEASE=1
AC_SUBST(LT_VERSION)
AC_SUBST(LT_RELEASE)

AC_ARG_ENABLE(progpath)
if test "${enable_progpath}" = "" ; then
   enable_progpath="$prefix/bin"
fi

AC_DEFINE_UNQUOTED(PROG_PATH, "$enable_progpath")
AC_SUBST(PROG_PATH)

# Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([memset strcasecmp strdup strrchr])

AC_OUTPUT([Makefile
                 cnpklib/Makefile])
