ppddir = $(datadir)/cups/model

ppd_DATA = \
	CNCUPSIPRC1ZJ.ppd\
	CNCUPSIPRC1ZK.ppd\
	CNCUPSIR1023ZK.ppd\
	CNCUPSIR1023ZS.ppd\
	CNCUPSIR105IZJ.ppd\
	CNCUPSIR105PZK.ppd\
	CNCUPSIR2016ZK.ppd\
	CNCUPSIR2016ZS.ppd\
	CNCUPSIR2018ZK.ppd\
	CNCUPSIR2018ZS.ppd\
	CNCUPSIR2020ZK.ppd\
	CNCUPSIR2020ZS.ppd\
	CNCUPSIR2030ZK.ppd\
	CNCUPSIR2030ZS.ppd\
	CNCUPSIR2230ZJ.ppd\
	CNCUPSIR2230ZK.ppd\
	CNCUPSIR2830ZK.ppd\
	CNCUPSIR2870ZJ.ppd\
	CNCUPSIR2870ZK.ppd\
	CNCUPSIR3025ZJ.ppd\
	CNCUPSIR3025ZK.ppd\
	CNCUPSIR3030ZK.ppd\
	CNCUPSIR3045ZJ.ppd\
	CNCUPSIR3045ZK.ppd\
	CNCUPSIR3180CZK.ppd\
	CNCUPSIR3225ZJ.ppd\
	CNCUPSIR3225ZK.ppd\
	CNCUPSIR3230ZK.ppd\
	CNCUPSIR3245ZJ.ppd\
	CNCUPSIR3245ZK.ppd\
	CNCUPSIR3530ZK.ppd\
	CNCUPSIR4530ZK.ppd\
	CNCUPSIR4570ZJ.ppd\
	CNCUPSIR4570ZK.ppd\
	CNCUPSIR5065ZJ.ppd\
	CNCUPSIR5065ZK.ppd\
	CNCUPSIR5075ZJ.ppd\
	CNCUPSIR5075ZK.ppd\
	CNCUPSIR6570ZJ.ppd\
	CNCUPSIR6570ZK.ppd\
	CNCUPSIR6880CZK.ppd\
	CNCUPSIR7105ZJ.ppd\
	CNCUPSIR7105ZK.ppd\
	CNCUPSIR7270ZJ.ppd\
	CNCUPSIR8070ZK.ppd\
	CNCUPSIR8570ZJ.ppd\
	CNCUPSIR85PZK.ppd\
	CNCUPSIR9070ZK.ppd\
	CNCUPSIRC2550ZJ.ppd\
	CNCUPSIRC2550ZK.ppd\
	CNCUPSIRC2580ZK.ppd\
	CNCUPSIRC3180ZK.ppd\
	CNCUPSIRC3380ZJ.ppd\
	CNCUPSIRC3380ZK.ppd\
	CNCUPSIRC3580ZJ.ppd\
	CNCUPSIRC3580ZK.ppd\
	CNCUPSIRC4080ZJ.ppd\
	CNCUPSIRC4580ZJ.ppd\
	CNCUPSIRC4580ZK.ppd\
	CNCUPSIRC5180ZJ.ppd\
	CNCUPSIRC5180ZK.ppd\
	CNCUPSIRC5185ZJ.ppd\
	CNCUPSIRC5185ZK.ppd\
	CNCUPSIRC5870ZJ.ppd\
	CNCUPSIRC5870ZK.ppd\
	CNCUPSIRC6870ZJ.ppd\
	CNCUPSIRC6870ZK.ppd\
	CNCUPSIRC6880ZJ.ppd\
	CNCUPSIRC6880ZK.ppd\
	CNCUPSL1000ZJ.ppd\
	CNCUPSL230ZJ.ppd\
	CNCUPSL230ZK.ppd\
	CNCUPSL230ZS.ppd\
	CNCUPSLBP3360ZK.ppd\
	CNCUPSLBP3370ZK.ppd\
	CNCUPSLBP3410ZJ.ppd\
	CNCUPSLBP3460ZK.ppd\
	CNCUPSLBP3700ZJ.ppd\
	CNCUPSLBP3800ZJ.ppd\
	CNCUPSLBP3930ZJ.ppd\
	CNCUPSLBP3950ZJ.ppd\
	CNCUPSLBP3970ZJ.ppd\
	CNCUPSLBP3980MZJ.ppd\
	CNCUPSLBP3980ZJ.ppd\
	CNCUPSLBP4500ZJ.ppd\
	CNCUPSLBP5360ZK.ppd\
	CNCUPSLBP5400ZJ.ppd\
	CNCUPSLBP5900ZJ.ppd\
	CNCUPSLBP5910MZJ.ppd\
	CNCUPSLBP5910ZJ.ppd\
	CNCUPSLBP5960ZK.ppd\
	CNCUPSLBP5975ZK.ppd\
	CNCUPSLC3000ZK.ppd\
	CNCUPSLC3000ZS.ppd\
	CNCUPSMF4010ZJ.ppd\
	CNCUPSMF4010ZK.ppd\
	CNCUPSMF4100ZJ.ppd\
	CNCUPSMF4100ZK.ppd\
	CNCUPSMF4100ZS.ppd\
	CNCUPSMF4200ZJ.ppd\
	CNCUPSMF4200ZK.ppd\
	CNCUPSMF4200ZS.ppd\
	CNCUPSMF4600ZJ.ppd\
	CNCUPSMF4600ZK.ppd\
	CNCUPSMF4600ZS.ppd\
	CNCUPSMF6500ZJ.ppd\
	CNCUPSMF6500ZK.ppd\
	CNCUPSMF6500ZS.ppd\
	CNCUPSMF7100ZK.ppd\
	CNCUPSMF7200ZJ.ppd\
	CNCUPSMF7200ZS.ppd\
	CNCUPSMF7400ZJ.ppd\
	CNCUPSMF7400ZS.ppd\
        CNCUPSD1100ZK.ppd\
        CNCUPSD1100ZS.ppd\
        CNCUPSD450ZJ.ppd\
        CNCUPSD450ZK.ppd\
        CNCUPSD450ZS.ppd\
        CNCUPSD490ZK.ppd\
        CNCUPSD490ZS.ppd\
        CNCUPSIPRC1PZJ.ppd\
        CNCUPSIPRC1PZK.ppd\
        CNCUPSIR1025ZK.ppd\
        CNCUPSIR1025ZS.ppd\
        CNCUPSIR2320ZK.ppd\
        CNCUPSIR2320ZS.ppd\
        CNCUPSIRC1022ZK.ppd\
        CNCUPSIRC1022ZS.ppd\
        CNCUPSIRC2110ZJ.ppd\
        CNCUPSLBP9600CZJ.ppd\
        CNCUPSMF4350ZJ.ppd\
        CNCUPSMF4350ZK.ppd\
        CNCUPSMF4350ZS.ppd\
        CNCUPSMF4390ZJ.ppd\
        CNCUPSMF4390ZK.ppd\
        CNCUPSMF4390ZS.ppd\
        CNCUPSMF8400ZJ.ppd\
        CNCUPSMF8400ZK.ppd\
        CNCUPSMF8400ZS.ppd\
        CNCUPSMF9300ZK.ppd\
        CNCUPSMF9300ZS.ppd\
        CNCUPSIR2420ZK.ppd\
	CNCUPSIRADVC9075ZJ.ppd\
	CNCUPSIRADVC9075ZK.ppd\
	CNCUPSIRADVC9065ZJ.ppd\
	CNCUPSIRADVC9070ZK.ppd\
	CNCUPSIRADVC7065ZJ.ppd\
	CNCUPSIRADVC7065ZK.ppd\
        CNCUPSIRADVC5051ZJ.ppd\
	CNCUPSIRADVC5051ZK.ppd\
	CNCUPSIRADVC5035ZJ.ppd\
	CNCUPSIRADVC5035ZK.ppd\
	CNCUPSLBP7700CZJ.ppd\
	CNCUPSLBP7750CZK.ppd\
	CNCUPSMF8000ZJ.ppd\
	CNCUPSMF8000ZK.ppd\
	CNCUPSMF8000ZS.ppd\
	CNCUPSMF8300ZJ.ppd\
	CNCUPSMF8300ZK.ppd\
	CNCUPSMF8300ZS.ppd\
	CNCUPSIRADV8105ZK.ppd\
	CNCUPSIRADV8095ZK.ppd\
	CNCUPSIRADV6075ZJ.ppd\
	CNCUPSIRADV6075ZK.ppd\
	CNCUPSIRADV6065ZJ.ppd\
	CNCUPSIRADV6065ZK.ppd\
	CNCUPSLBP6650ZK.ppd\
	CNCUPSMF5800ZK.ppd\
	CNCUPSMF5800ZS.ppd\
	CNCUPSIR2520ZK.ppd\
	CNCUPSIR2520ZS.ppd\
	CNCUPSIR2530ZK.ppd\
	CNCUPSIR2530ZS.ppd\
	CNCUPSIR2545ZK.ppd\
	CNCUPSIR2545ZS.ppd\
	CNCUPSLBP8630ZJ.ppd\
	CNCUPSD500ZK.ppd\
	CNCUPSD500ZS.ppd\
	CNCUPSIRADVC2025ZK.ppd\
	CNCUPSIRADVC2030IZK.ppd\
	CNCUPSIRADVC2030LZK.ppd\
	CNCUPSIRADVC2030ZJ.ppd\
	CNCUPSIRADVC2030ZK.ppd\
	CNCUPSIRC1030ZK.ppd\
	CNCUPSIRC1030ZS.ppd\
	CNCUPSMF9200ZJ.ppd\
	CNCUPSMF9200ZK.ppd\
	CNCUPSMF9200ZS.ppd\
	CNCUPSLBP6700ZJ.ppd\
	CNCUPSLBP6750ZK.ppd\
	CNCUPSMF4400ZJ.ppd\
	CNCUPSMF4400ZK.ppd\
	CNCUPSMF4400ZS.ppd\
	CNCUPSMF4500ZJ.ppd\
	CNCUPSMF4500ZK.ppd\
	CNCUPSMF4500ZS.ppd\
	CNCUPSIRADV8095ZJ.ppd\
	CNCUPSIRADV8105ZJ.ppd\
	CNCUPSIR2420ZS.ppd\
	CNCUPSIR2422ZK.ppd\
	CNCUPSIR2422ZS.ppd\
	CNCUPSD1300ZK.ppd\
	CNCUPSIR1133ZK.ppd\
	CNCUPSMF3010ZK.ppd\
	CNCUPSMF3010ZS.ppd\
	CNCUPSMF4400WZK.ppd\
	CNCUPSMF4500WZK.ppd\
	CNCUPSMF4500WZS.ppd\
	CNCUPSMF5900ZK.ppd\
	CNCUPSMF5900ZS.ppd\
	CNCUPSMF6700ZJ.ppd\
	CNCUPSIR1750ZK.ppd\
	CNCUPSIR1750ZS.ppd\
	CNCUPSIRADV4035ZJ.ppd\
	CNCUPSIRADV4035ZK.ppd\
	CNCUPSIRADV4045ZJ.ppd\
	CNCUPSIRADV4051ZK.ppd\
	CNCUPSLBP6600ZJ.ppd\
	CNCUPSLBP6670ZK.ppd\
	CNCUPSLBP6680ZK.ppd\
	CNCUPSLBP7600CZJ.ppd\
	CNCUPSLBP7660CZK.ppd\
	CNCUPSLBP7680CZK.ppd\
	CNCUPSMF8000CZJ.ppd\
	CNCUPSMF8000CZK.ppd\
	CNCUPSMF8000CZS.ppd\
	CNCUPSMF8300CZJ.ppd\
	CNCUPSMF8300CZK.ppd\
	CNCUPSMF8300CZS.ppd

